src/objects/Task__c.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>Date and time when the task was completed.</description>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Date and time when the task was started.</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
        <fields>
        <fullName>StartLocation__c</fullName>
        <label>Start Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>EndLocation__c</fullName>
        <label>End Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the form submission for this task (not null only if the task is of data collect)</description>
        <label>Submission</label>
        <referenceTo>Submission__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaskTemplate__c</fullName>
        <label>Task</label>
        <referenceTo>TaskTemplate__c</referenceTo>
        <relationshipLabel>Task Activities</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Task Activity</label>
    <nameField>
        <label>Task Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>